--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ div
 {
 width:100px;
 height:75px;
-background-color:yellow;
+background-color:blue;
 border:1px solid black;
 }
 div#div2
@@ -21,9 +21,9 @@ transform:rotate(30deg);
 </head>
 <body>
 
-<div>你好。这是一个 div 元素。</div>
+<div>SB周扒皮，只会吹牛逼</div>
 
-<div id="div2">你好。这是一个 div 元素。</div>
+<div id="div2">吃屎吧你!</div>
 
 </body>
 </html>
